# a2ex

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  TODOS.md
.github/workflows/: build-image.yml  ci.yml  publish-plugin.yml  release-daemon.yml
daemon/: Cargo.toml
daemon/.cargo/: config.toml
daemon/crates/a2ex-across-adapter/: Cargo.toml
daemon/crates/a2ex-across-adapter/src/: lib.rs  transport.rs
daemon/crates/a2ex-compiler/: Cargo.toml
daemon/crates/a2ex-compiler/src/: lib.rs
daemon/crates/a2ex-control/: Cargo.toml
daemon/crates/a2ex-control/src/: lib.rs
daemon/crates/a2ex-daemon/: Cargo.toml
daemon/crates/a2ex-daemon/src/: lib.rs  main.rs
daemon/crates/a2ex-evm-adapter/: Cargo.toml
daemon/crates/a2ex-evm-adapter/src/: lib.rs
daemon/crates/a2ex-fast-path/: Cargo.toml
daemon/crates/a2ex-fast-path/src/: lib.rs
daemon/crates/a2ex-gateway/: Cargo.toml
daemon/crates/a2ex-gateway/src/: lib.rs
daemon/crates/a2ex-hyperliquid-adapter/: Cargo.toml
daemon/crates/a2ex-hyperliquid-adapter/src/: lib.rs  signing.rs  transport.rs
daemon/crates/a2ex-ipc/: Cargo.toml
daemon/crates/a2ex-ipc/src/: lib.rs
daemon/crates/a2ex-live-harness/: Cargo.toml
daemon/crates/a2ex-live-harness/src/: a2ex_rereads.rs  assembly_summary.rs  error.rs  evidence_bundle.rs  lib.rs  live_route.rs  main.rs  openclaw.rs  preflight.rs  run_state.rs  runtime_metadata.rs  verdict.rs  waiaas.rs
daemon/crates/a2ex-mcp/: Cargo.toml
daemon/crates/a2ex-mcp/src/: chain_tools.rs  defi_tools.rs  error.rs  lib.rs  main.rs  server.rs  session.rs  venue_recipes.rs  venue_tools.rs
daemon/crates/a2ex-mcp/src/handlers/: chain.rs  defi.rs  mod.rs  venue.rs  venue_recipe.rs
daemon/crates/a2ex-onboarding/: Cargo.toml
daemon/crates/a2ex-onboarding/src/: bootstrap.rs  entrypoint.rs  lib.rs  model.rs  store.rs
daemon/crates/a2ex-planner/: Cargo.toml
daemon/crates/a2ex-planner/src/: lib.rs
daemon/crates/a2ex-policy/: Cargo.toml
daemon/crates/a2ex-policy/src/: lib.rs
daemon/crates/a2ex-prediction-market-adapter/: Cargo.toml
daemon/crates/a2ex-prediction-market-adapter/src/: lib.rs  signing.rs  transport.rs
daemon/crates/a2ex-reservation/: Cargo.toml
daemon/crates/a2ex-reservation/src/: lib.rs
daemon/crates/a2ex-signer-bridge/: Cargo.toml
daemon/crates/a2ex-signer-bridge/src/: lib.rs
daemon/crates/a2ex-skill-bundle/: Cargo.toml
daemon/crates/a2ex-skill-bundle/src/: interpret.rs  lib.rs  lifecycle.rs  loader.rs  model.rs  parser.rs  proposal.rs
daemon/crates/a2ex-state/: Cargo.toml
daemon/crates/a2ex-state/src/: analytics.rs  lib.rs  reconciliation.rs  repository.rs  schema.rs
daemon/crates/a2ex-strategy-runtime/: Cargo.toml
daemon/crates/a2ex-strategy-runtime/src/: lib.rs
daemon/crates/a2ex-waiaas-signer/: Cargo.toml
daemon/crates/a2ex-waiaas-signer/src/: lib.rs
daemon/crates/a2ex-waiaas-signer/tests/: waiaas_live.rs
daemon/tests/: across_http_transport.rs  across_live_api.rs  agent_control.rs  compiler_pipeline.rs  contract_call_adapter.rs  control_intake_contract.rs  control_intake_persistence.rs  control_route_diagnostics.rs  decision_gateway.rs  fast_action_templates.rs  fast_path_end_to_end.rs  fast_path_engine.rs  fast_path_execution_state.rs  fast_path_signer_flow.rs  hyperliquid_adapter.rs  hyperliquid_http_transport.rs  install_bootstrap_contract.rs  install_bootstrap_entrypoint.rs  install_to_ready_end_to_end.rs  multistep_execution.rs  multistep_observability.rs  multistep_planner.rs  onboarding_checklist_contract.rs  onboarding_guided_flow.rs  onboarding_mcp_guided_flow.rs  onboarding_resume_state.rs  operator_recovery_end_to_end.rs  operator_supervision_loop_end_to_end.rs  policy_gate.rs  polymarket_http_transport.rs  proposal_to_autonomy_end_to_end.rs  readiness_to_stop_end_to_end.rs  reconciliation_queries.rs  reservation_flow.rs  route_readiness_guided_flow.rs  route_readiness_mcp.rs  route_readiness_mcp_guided_flow.rs  route_readiness_projection.rs  runtime_stop_control.rs  runtime_stop_control_mcp.rs  (+30 more)
daemon/tests/support/: across_harness.rs  anvil_harness.rs  hyperliquid_harness.rs  mod.rs  openclaw_harness.rs  prediction_market_harness.rs  skill_bundle_harness.rs
docker/: entrypoint.sh
docs/designs/: PHASE2-WALLET-AKASH-DEPLOY.md
landing/: .gitignore  CLAUDE.md  DESIGN.md  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vercel.json
landing/app/: globals.css  providers.tsx
landing/app/[locale]/: layout.tsx  page.tsx
landing/app/agent/: route.ts
landing/components/: AgentUrlCopy.tsx  AiProtocol.tsx  Architecture.tsx  BundleUrl.tsx  ConnectWalletButton.tsx  CopyButton.tsx  Features.tsx  Footer.tsx  FundingModal.tsx  Hero.tsx  HowItWorks.tsx  LanguageSwitcher.tsx  LiveStats.tsx  Nav.tsx  QuickStart.tsx  StrategyComparison.tsx
landing/i18n/: config.ts  request.ts
landing/lib/: log.ts  redis.ts
landing/lib/akash/: client.ts  sdl.ts
landing/lib/auth/: middleware.ts  session.ts
landing/lib/db/: index.ts  schema.ts  seed.ts  strategies-seed.ts
landing/lib/hooks/: useAuth.ts  useFirstTradeConfetti.ts
landing/messages/: en.json  ko.json
landing/public/: bundle.json
landing/scripts/: e2e-backup-check.ts  e2e-headless.ts  e2e-recovery.ts  get-siwe-cookie.ts  test-gateway-chat.ts
landing/test/: callback.test.ts  deploy.test.ts  siwe.test.ts  stream.test.ts  terminate.test.ts
plugin/: .env.example  openclaw.plugin.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
plugin/src/: constants.ts  index.ts
plugin/src/services/: a2ex.service.ts  waiaas.service.ts
plugin/src/state/: plugin-state.ts
plugin/src/tools/: a2ex-dynamic.ts  bootstrap.ts  factory.ts  system-health.ts  waiaas-tools.ts
plugin/src/transport/: callback-client.ts  gateway-ws-client.ts  mcp-stdio-client.ts  waiaas-http-client.ts
plugin/src/types/: json-schema.ts  openclaw-plugin.ts
plugin/test/lifecycle/: bootstrap-lifecycle.test.ts  crash-recovery.test.ts  mcp-dynamic-tools.test.ts  mock-mcp-server.mjs  mock-mcp-server.ts  plugin-simulator.ts  (+2 more)
(+32 files in other folders)
