[package]
name = "a2ex-evm-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
alloy-provider.workspace = true
async-trait.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
