[package]
name = "a2ex-hyperliquid-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
a2ex-evm-adapter = { path = "../a2ex-evm-adapter" }
a2ex-signer-bridge = { path = "../a2ex-signer-bridge" }
async-trait.workspace = true
hex.workspace = true
reqwest = { workspace = true, features = ["json"] }
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"

[[test]]
name = "hyperliquid_http_transport"
path = "../../tests/hyperliquid_http_transport.rs"
