[package]
name = "a2ex-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
a2ex-control = { path = "../a2ex-control" }
futures-util.workspace = true
interprocess.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
