[package]
name = "a2ex-live-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
a2ex-onboarding = { path = "../a2ex-onboarding" }
a2ex-state = { path = "../a2ex-state" }
async-trait.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process"] }
uuid.workspace = true
