[package]
name = "a2ex-prediction-market-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
a2ex-signer-bridge = { path = "../a2ex-signer-bridge" }
async-trait.workspace = true
base64.workspace = true
hex.workspace = true
hmac.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
base64.workspace = true
rand = "0.9"
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"

[[test]]
name = "polymarket_http_transport"
path = "../../tests/polymarket_http_transport.rs"
