[package]
name = "a2ex-skill-bundle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
url = { version = "2.5", features = ["serde"] }
