[package]
name = "a2ex-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
a2ex-control = { path = "../a2ex-control" }
a2ex-planner = { path = "../a2ex-planner" }
a2ex-skill-bundle = { path = "../a2ex-skill-bundle" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-rusqlite.workspace = true
uuid.workspace = true
