[package]
name = "a2ex-waiaas-signer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
a2ex-signer-bridge = { path = "../a2ex-signer-bridge" }
async-trait.workspace = true
hex.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
